<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".presentation.ui.character_info.CharacterInfoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TestRaM.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:popupTheme="@style/Theme.TestRaM.PopupOverlay"
            app:subtitle="Name" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_info_fragment_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_character_big_avatar"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.4" />

                <TextView
                    android:id="@+id/tv_title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    android:text="@string/tv_title_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    android:text="@string/tv_title_species"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_name" />

                <TextView
                    android:id="@+id/tv_title_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    android:text="@string/tv_title_gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_species" />

                <TextView
                    android:id="@+id/tv_title_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    android:text="@string/tv_title_status"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_gender" />

                <TextView
                    android:id="@+id/tv_title_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    android:text="@string/tv_title_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_status" />

                <TextView
                    android:id="@+id/tv_title_episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tv_title_episode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_location" />

                <TextView
                    android:id="@+id/tv_value_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_value_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_name" />

                <TextView
                    android:id="@+id/tv_value_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_species" />

                <TextView
                    android:id="@+id/tv_value_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_gender" />

                <TextView
                    android:id="@+id/tv_value_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_status" />

                <TextView
                    android:id="@+id/tv_value_episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_title_tv"
                    android:layout_marginTop="@dimen/margin_top_title_tv"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@+id/tv_value_location" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>